tooling/nargo_cli/tests/snapshots/execution_success/regression_capacity_tracker/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(expected: pub Field, first: Field, input: [Field; 20]) {
    let mut hasher_vector: [Field] = input.as_vector();
    hasher_vector = hasher_vector.push_front(first);
    assert(hasher_vector[0_u32] == expected);
    if (expected as u32) > 10_u32 {
        hasher_vector[(expected - 10_Field) as u32] = 100_Field;
    } else {
        hasher_vector[expected as u32] = 100_Field;
    };
    assert(hasher_vector[0_u32] == expected);
}
